Changes to be committed:

--- a/js1.html
+++ b/js1.html
@@ -88,7 +88,7 @@
         }
       
     </script> -->
-    <script>
+    <!-- <script>
       var ar = ["icons_03.jpg", "icons_05.jpg", "icons_09.jpg","icons_10.jpg"];
       var index = 0;
       function next() {
@@ -116,7 +116,7 @@
       <img src="images/icons_03.jpg" alt="" id="img1" />
       <input type="button" value="next" onclick="next()" />
       <input type="button" value="previos" onclick="prev()" />
-    </div>
+    <!-- </div> -->
     <!-- <div class="container">
       <label for="num">enter number</label>
       <input
@@ -336,5 +336,15 @@
             </div>
         </div>
     </div> -->
+    </head>
+    <body>
+      <div class="container">
+        <label for="email">enter email please</label>
+        <input type="text" name="email" id="rst">
+        <input type="button" value="check validation" class="btn btn-dark" onclick="go()">
+        <div id="output"></div>
+      </div>
+
+    
   </body>
 </html>
