Changes to be committed:

--- a/js1.html
+++ b/js1.html
@@ -345,6 +345,34 @@
         <div id="output"></div>
       </div>
 
+      <div class="container">
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>name</th>
+              <!-- <td>novi sandhu</td> -->
+            <!-- </tr>
+            <tr> -->
+              <th>class</th>
+              <!-- <td>b tech</td> -->
+              <th>department</th>
+              <th>fees</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>novi sandhu</td>
+            <!-- </tr>
+            <tr> -->
+              <td>b tech</td>
+              <td>cse</td>
+              <td>40000</td>
+            </tr>
+          </tbody>
+
+        </table>
+      </div>
+
     
   </body>
 </html>
