Changes to be committed:

--- a/js1.html
+++ b/js1.html
@@ -345,7 +345,7 @@
         <div id="output"></div>
       </div>
 
-      <div class="container">
+      <!-- <div class="container">
         <table class="table table-bordered">
           <thead>
             <tr>
@@ -353,25 +353,25 @@
               <!-- <td>novi sandhu</td> -->
             <!-- </tr>
             <tr> -->
-              <th>class</th>
+              <!-- <th>class</th> -->
               <!-- <td>b tech</td> -->
-              <th>department</th>
+              <!-- <th>department</th>
               <th>fees</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>novi sandhu</td>
+              <td>novi sandhu</td> -->
             <!-- </tr>
             <tr> -->
-              <td>b tech</td>
+              <!-- <td>b tech</td>
               <td>cse</td>
               <td>40000</td>
             </tr>
-          </tbody>
+          </tbody> -->
 
-        </table>
-      </div>
+        <!-- </table>
+      </div> -->
 
     
   </body>
